[package]
name = "pelp"
description = "A (p)resentation h(elp)er. Makes it easy to create a revealjs presentation from a Markdown file."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vlad Petrov <oss@ejiek.id>"]
repository = "https://github.com/ejiek/pelp"
homepage = "https://github.com/ejiek/pelp"
readme = "README.md"
build = "build.rs"
include = ["src/*.md"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
enum-iterator = "2.1.0"

[build-dependencies]
anyhow = "1.0.82"
vergen-gix = { version = "1.0.0-beta.2", features = ["build", "cargo", "rustc", "si"] }
