[package]
name = "pelp"
description = "A (p)resentation h(elp)er. Makes it easy to create a revealjs presentation from a Markdown file."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vlad Petrov <oss@ejiek.id>"]
repository = "https://github.com/ejiek/pelp"
homepage = "https://github.com/ejiek/pelp"
readme = "README.md"
build = "build.rs"
include = ["src/*.md"]

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
enum-iterator = "2.1.0"
notify = "6.1.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "set-header"] }
tower-livereload = "0.9.2"
tracing-subscriber = "0.3.18"

[build-dependencies]
anyhow = "1.0.82"
vergen = { version = "9.0.0-beta.2", features = ["build", "cargo", "rustc", "si"] }

