[package]
name = "pelp"
description = "A (p)resentation h(elp)er. Makes it easy to create a revealjs presentation from a Markdown file."
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Vlad Petrov <oss@ejiek.id>"]
repository = "https://github.com/ejiek/pelp"
homepage = "https://github.com/ejiek/pelp"
readme = "README.md"
build = "build.rs"
include = ["src/*.md"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
dirs = "6"
enum-iterator = "2.3"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tower-livereload = "0.10"
tracing-subscriber = "0.3"

[build-dependencies]
anyhow = "1"
vergen = { version = "9.1", features = ["build", "cargo", "rustc", "si"] }
